# holonight-qt

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  Taskfile.yml
.claude/skills/add-qml-component/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
cmake/: HolonightQtConfig.cmake.in
config/: CMakeLists.txt  config.cpp  theme_catalog.cpp
config/holonight/: config.h  theme_catalog.h
data/: holonight-cyber-d.colors  holonight-cyber-l.colors  holonight-dark.colors  holonight-day.colors  holonight-ember.colors  holonight-latte.colors  holonight-light.colors  holonight-mocha.colors  holonight-sol.colors  holonight.colors  holonight.ghostty  holonight.kitty  tokyonight-day.colors  tokyonight-storm.colors
demo/: CMakeLists.txt  Main.qml  config.h.in  main.cpp
docs/: holonight-day-light-theme-and-switching.md  holonight-design-deviations.md  holonight-effects.md  holonight-rendering-audit.md  holonight-theme-review.md  improvement-req.md  theme-tokens.md
docs/sdd/holonight-qt-theme-variants/: DESIGN.md  SPEC.md  TASKS.md
docs/sdd/icon-font-config/: DESIGN.md  SPEC.md  TASKS.md
docs/sdd/semantic-border-surface-tokens/: DESIGN.md  SPEC.md  TASKS.md
docs/sdd/subpixel-border-fixes/: DESIGN.md  SPEC.md  TASKS.md
docs/sdd/theme-loader-resolver-layer/: DESIGN.md  SPEC.md  TASKS.md
docs/sdd/visual-polish/: DESIGN.md  SPEC.md  TASKS.md
palette/: CMakeLists.txt  palette.cpp
palette/holonight/: palette.h
platformtheme/: CMakeLists.txt  holonighttheme.cpp  holonighttheme.h  holonightthemeplugin.h  qholonight.json
qml/: Button.qml  CMakeLists.txt  CheckBox.qml  ComboBox.qml  Menu.qml  MenuItem.qml  ProgressBar.qml  RadioButton.qml  ScrollBar.qml  Slider.qml  Switch.qml  TabBar.qml  TabButton.qml  TextField.qml  ToolTip.qml  holonight-alias.qmldir  holonighttheme.cpp  holonighttheme.h  holoniightpalette.cpp  holoniightpalette.h
src/: CMakeLists.txt
src/platformtheme/: CMakeLists.txt  holonighttheme.cpp  holonighttheme.h  holonightthemeplugin.cpp  holonightthemeplugin.h
src/style/: CMakeLists.txt  holonightstyle.cpp  holonightstyle.h  holonightstyleplugin.cpp  holonightstyleplugin.h
src/theme/: CMakeLists.txt  themeloader.cpp  themeloader.h  themeresolver.cpp  themeresolver.h
style/: CMakeLists.txt  holonightstyle.cpp  holonightstyle.h  holonightstyleplugin.h
tests/: CMakeLists.txt  main.cpp  test_config.cpp  test_palette_contrast.cpp  test_palette_qpalette.cpp  test_palette_tokens.cpp  test_platformtheme_fonts.cpp  test_platformtheme_icons.cpp  test_platformtheme_smoke.cpp  test_qml_smoke.cpp  test_style_drawcomplexcontrol.cpp  test_style_drawprimitive.cpp  test_style_smoke.cpp  test_theme_resolver.cpp
tools/: CMakeLists.txt  generate_holonight_colors.cpp
